fix rosette overlapping row-donate

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -699,7 +699,7 @@ header
 				position absolute
 				top -125px
 				right -200px
-				z-index 150
+				z-index 90
 		.holly-holder-right
 			.holly
 				left -27px
@@ -718,7 +718,7 @@ header
 				position relative
 				left -168px
 				top -57px
-				z-index 150
+				z-index 90
 				margin-bottom -100px
 		.holly
 			z-index -3
